--- a/src/components/SocialLinkBox.astro
+++ b/src/components/SocialLinkBox.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
+import LangText from "./LangText.astro";
 import type { SocialLink } from "../types/config";
 
 type Props = SocialLink;
@@ -14,7 +15,7 @@ const { title, url, icon, external } = Astro.props;
 >
   <Icon name={icon} width={25} height={25} />
   <div class="flex items-center justify-between w-full">
-    <p>{title}</p>
+    <p><LangText text={title} /></p>
     <div class="rotate-45">
       <Icon name="mdi:arrow-up" />
     </div>
