--- a/src/components/SocialLink.astro
+++ b/src/components/SocialLink.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
+import LangText from "./LangText.astro";
 import type { SocialLink } from "../types/config";
 
 type Props = SocialLink;
@@ -14,6 +15,6 @@ const { title, url, icon, external } = Astro.props;
 >
   <Icon name={icon} width={25} height={25} />
   <div>
-    <p>{title}</p>
+    <p><LangText text={title} /></p>
   </div>
 </a>
