--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,19 +4,36 @@ import Layout from "../layouts/Layout.astro";
 import { aboutPageContent } from "../config";
 import ResumeItem from "../components/ResumeItem.astro";
 import SocialLinkBox from "../components/SocialLinkBox.astro";
+import LangText from "../components/LangText.astro";
 import {marked} from "marked"
 
-const pageDescription = marked.parse(aboutPageContent.about.description)
-const workDescription = marked.parse(aboutPageContent.work.description)
-const connectDescription = marked.parse(aboutPageContent.connect.description)
+const pageDescriptionEn = marked.parse(aboutPageContent.about.description.en);
+const pageDescriptionEs = marked.parse(aboutPageContent.about.description.es);
+const workDescriptionEn = marked.parse(aboutPageContent.work.description.en);
+const workDescriptionEs = marked.parse(aboutPageContent.work.description.es);
+const connectDescriptionEn = marked.parse(aboutPageContent.connect.description.en);
+const connectDescriptionEs = marked.parse(aboutPageContent.connect.description.es);
+const educationDescriptionEn = marked.parse(aboutPageContent.education.description.en);
+const educationDescriptionEs = marked.parse(aboutPageContent.education.description.es);
+
 ---
 
 <Layout seo={aboutPageContent.seo}>
-  <section class="mt-10 max-w-2xl mx-auto px-6">
-    <h1 class="font-bold text-3xl mb-1">About</h1>
-    <p class="opacity-60 mb-10">{aboutPageContent.subtitle}</p>
+  <section class="mt-10 max-w-3xl mx-auto px-8">
+    <h1 class="font-bold text-3xl mb-1">
+      <span class="lang-en">About</span>
+      <span class="lang-es">Sobre mí</span>
+    </h1>
+    <p class="opacity-60 mb-10">
+      <LangText text={aboutPageContent.subtitle} />
+    </p>
     <div class="mb-14">
-      <Fragment set:html={pageDescription} />
+      <div class="lang-en">
+        <Fragment set:html={pageDescriptionEn} />
+      </div>
+      <div class="lang-es">
+        <Fragment set:html={pageDescriptionEs} />
+      </div>
     </div>
     <div class="flex flex-col min-[410px]:flex-row">
       <Image
@@ -34,23 +51,58 @@ const connectDescription = marked.parse(aboutPageContent.connect.description)
         class="w-[150px] h-[250px] object-cover rounded-xl rotate-6 mx-auto sm:ml-auto"
       />
     </div>
+    </section>
+    <section class="my-20 mt-32 max-w-3xl mx-auto px-8 sm:flex sm:gap-16">
+  <h2 class="mb-8 sm:mb-0 opacity-60 sm:w-28 shrink-0">
+    <span class="lang-en">Education</span>
+    <span class="lang-es">Educación</span>
+  </h2>
+  <div>
+    <div class="mb-6">
+      <div class="lang-en">
+        <Fragment set:html={educationDescriptionEn} />
+      </div>
+      <div class="lang-es">
+        <Fragment set:html={educationDescriptionEs} />
+      </div>
+    </div>
+    <div class="grid grid-cols-1 group">
+      {aboutPageContent.education.items.map((item) => <ResumeItem {...item} />)}
+    </div>
+  </div>
   </section>
-  <section class="my-20 mt-32 max-w-2xl mx-auto px-6 sm:flex sm:gap-16">
-    <h2 class="mb-8 sm:mb-0 opacity-60">Work</h2>
+  <section class="my-20 mt-32 max-w-3xl mx-auto px-8 sm:flex sm:gap-16">
+    <h2 class="mb-8 sm:mb-0 opacity-60 sm:w-28 shrink-0">
+      <span class="lang-en">Work</span>
+      <span class="lang-es">Experiencia</span>
+    </h2>
     <div>
       <div class="mb-6">
-        <Fragment set:html={workDescription} />
+        <div class="lang-en">
+          <Fragment set:html={workDescriptionEn} />
+        </div>
+        <div class="lang-es">
+          <Fragment set:html={workDescriptionEs} />
+        </div>
       </div>
       <div class="grid grid-cols-1 group">
         {aboutPageContent.work.items.map((item) => <ResumeItem {...item} />)}
       </div>
     </div>
   </section>
-  <section class="mt-32 max-w-2xl mx-auto px-6 sm:flex sm:gap-16">
-    <h2 class="mb-8 sm:mb-0 opacity-60">Connect</h2>
+  <section class="mt-32 max-w-3xl mx-auto px-8 sm:flex sm:gap-16">
+    <h2 class="mb-8 sm:mb-0 opacity-60 sm:w-28 shrink-0">
+      <span class="lang-en">Connect</span>
+      <span class="lang-es">Contacto</span>
+    </h2>
     <div>
       <div class="mb-6">
-        <Fragment set:html={connectDescription} />
+        <div class="lang-en">
+          <Fragment set:html={connectDescriptionEn} />
+        </div>
+        <div class="lang-es">
+          <Fragment set:html={connectDescriptionEs} />
+        </div>
       </div>
       <div class="grid grid-cols-2 gap-2 group">
         {
