--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -3,6 +3,7 @@ import Layout from "../../layouts/Layout.astro";
 import { getEntry, render } from "astro:content";
 import { Image } from "astro:assets";
 import { identity } from "../../config";
+import LangText from "../../components/LangText.astro";
 
 const { id } = Astro.params;
 const entry = await getEntry("posts", id as string);
@@ -16,15 +17,17 @@ const { Content,  remarkPluginFrontmatter} = await render(entry);
 
 <Layout
   seo={{
-    title: entry.data.title,
-    description: entry.data.description,
+    title: entry.data.title.en,
+    description: entry.data.description.en,
     image: entry.data.image.url,
   }}
 >
-  <section class="mt-10 max-w-2xl mx-auto px-6">
-    <h1 class="font-bold text-3xl mb-4">{entry.data.title}</h1>
+  <section class="mt-10 max-w-3xl mx-auto px-8">
+    <h1 class="font-bold text-3xl mb-4">
+      <LangText text={entry.data.title} />
+    </h1>
     <p class="opacity-60 mb-6">
-      {entry.data.description}
+      <LangText text={entry.data.description} />
     </p>
     <div class="flex gap-4 mb-6">
       <Image
