--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,16 +2,30 @@
 import Layout from "../layouts/Layout.astro";
 import { projectsPageContent } from "../config";
 import ProjectCard from "../components/ProjectCard.astro";
+import LangText from "../components/LangText.astro";
+import { getCollection } from "astro:content";
+
+const projects = await getCollection("projects");
+projects.sort((a, b) => {
+  const yearA = Number(a.data.year);
+  const yearB = Number(b.data.year);
+  return yearB - yearA;
+});
 ---
 
 <Layout seo={projectsPageContent.seo}>
-  <section class="mt-10 max-w-2xl mx-auto px-6">
-    <h1 class="font-bold text-3xl mb-1">Projects</h1>
-    <p class="opacity-60 mb-10">{projectsPageContent.subtitle}</p>
-    <div class="grid grid-cols-1 group">
+  <section class="mt-10 max-w-3xl mx-auto px-8">
+    <h1 class="font-bold text-3xl mb-1">
+      <span class="lang-en">Projects</span>
+      <span class="lang-es">Proyectos</span>
+    </h1>
+    <p class="opacity-60 mb-10">
+      <LangText text={projectsPageContent.subtitle} />
+    </p>
+    <div class="grid grid-cols-1 gap-10 sm:gap-6 mb-10">
       {
-        projectsPageContent.projects.map((project) => (
-          <ProjectCard {...project} />
+        projects.map((project) => (
+          <ProjectCard project={project} />
         ))
       }
     </div>
